--- a/style.css
+++ b/style.css
@@ -2,4 +2,32 @@ body{
     display: flex;
     flex-direction: column;
     align-items: center;
+    background-color: aqua;
+}
+#myH1{
+    font-size: 4rem;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(41, 46, 41);
+}
+#container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    border: 2px solid;
+    border-radius: 50px;
+    background-color: white;
+}
+#display{
+    font-size: 5rem;
+    font-family: monospace;
+    font-weight: bold;
+    color: #6d4848;
+    text-shadow: 2px 2px 2px black;
+    margin-bottom: 25px;
+}
+#controls button{
+    font-size: 1.5rem;
+    font-weight: bold;
+    padding: 10px;
 }
